BDSGREEN17: propagated changes to hive-related test scripts made on branch-2.3.2-alti to 2.2.1